@@ -15,8 +15,12 @@ class TestGemExtRakeBuilder < RubyGemTestCase
   end
 
   def test_class_build
-    File.open File.join(@ext, 'Rakefile'), 'w' do |configure|
-      configure.puts "task :extension"
+    File.open File.join(@ext, 'mkrf_conf.rb'), 'w' do |mkrf_conf|
+      mkrf_conf.puts <<-EO_MKRF
+        File.open("Rakefile","w") do |f|
+          f.puts "task :default"
+        end
+        EO_MKRF
     end
 
     output = []
@@ -24,11 +28,13 @@ class TestGemExtRakeBuilder < RubyGemTestCase
 
     Dir.chdir @ext do
       realdir = Dir.pwd
-      Gem::ExtRakeBuilder.build nil, nil, @dest_path, output
+      Gem::ExtRakeBuilder.build 'mkrf_conf.rb', nil, @dest_path, output
     end
 
     expected = [
-      "rake RUBYARCHDIR=#{@dest_path} RUBYLIBDIR=#{@dest_path} extension",
+      "ruby mkrf_conf.rb",
+      "",
+      "rake RUBYARCHDIR=#{@dest_path} RUBYLIBDIR=#{@dest_path}",
       "(in #{realdir})\n"
     ]
 
@@ -36,25 +42,31 @@ class TestGemExtRakeBuilder < RubyGemTestCase
   end
 
   def test_class_build_fail
-    File.open File.join(@ext, 'rakefile'), 'w' do |rakefile|
-      rakefile.puts "task :extension do abort 'fail' end"
+    File.open File.join(@ext, 'mkrf_conf.rb'), 'w' do |mkrf_conf|
+      mkrf_conf.puts <<-EO_MKRF
+        File.open("Rakefile","w") do |f|
+          f.puts "task :default do abort 'fail' end"
+        end
+        EO_MKRF
     end
 
     output = []
 
     error = assert_raise Gem::InstallError do
       Dir.chdir @ext do
-        Gem::ExtRakeBuilder.build nil, nil, @dest_path, output
+        Gem::ExtRakeBuilder.build "mkrf_conf.rb", nil, @dest_path, output
       end
     end
 
     expected = <<-EOF.strip
 rake failed:
 
-rake RUBYARCHDIR=#{@dest_path} RUBYLIBDIR=#{@dest_path} extension
+ruby mkrf_conf.rb
+
+rake RUBYARCHDIR=#{@dest_path} RUBYLIBDIR=#{@dest_path}
     EOF
 
-    assert_equal expected, error.message.split("\n")[0..2].join("\n")
+    assert_equal expected, error.message.split("\n")[0..4].join("\n")
   end
 
 end
